# framboise

./: .env  .env.example  .gitignore  README.md  pyproject.toml  server.py  start.sh
api/: AGENTS.md  README.md  __init__.py  docsets.toml  docsets.toml.exemple  engine.py  main.py  models.py  pyproject.toml  settings.py
api/docs/benchmark/: faq.md  index.md
api/docs/benchmark/appendix/: packx_v2_appendix_a.md  packx_v2_appendix_b.md  packx_v2_deep_dive.md  packx_v2_internals.md
api/docs/benchmark/noise/: cli_prototype.md  dev_log.md  embedded_notes.md  logpack.md  metrics_blob.md  packx_research_notes.md  packx_v2_draft.md  packx_v2_draft2.md  packx_v2_partial.md  random_telemetry.md  ui_draft.md
api/docs/benchmark/notes/: frontend_quirks.md  glossary.md  implementation_checklist.md  release_notes.md  test_vectors.md  validation_playbook.md
api/docs/benchmark/specs/: changelog.md  checksum.md  cli.md  compat.md  diagnostics.md  errors.md  examples.md  faq_extra.md  fields.md  frontend.md  limits.md  packx_v2.md
api/docs/extended/: index.md
api/docs/minimal/: docset-workflow.md  guide.html  index.html  weird-python-functions.html
api/docs/minimal/extra/: ops-playbook.md
