[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.12.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "fastembed>=0.7.4",
    "lxml>=6.0.2",
    "markdown>=3.10",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.40.0",
]
